fix: define a max height to list not overflow the screen

--- a/src/components/Layout/CartModal/CartModal.module.css
+++ b/src/components/Layout/CartModal/CartModal.module.css
@@ -21,3 +21,8 @@
   text-align: center;
   margin-bottom: 20px;
 }
+
+.meals-list {
+  max-height: 50vh;
+  overflow-y: scroll;
+}
